--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://kit.fontawesome.com/c710e7c3c6.js" crossorigin="anonymous"></script>
     <title>ToDo</title>
   </head>
   <body>
