--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="height: 100%; padding: 8px 16px"></div>
+    <div id="root" style="height: 100%; padding: 8px 16px; overflow: hidden"></div>
   </body>
 </html>
